[gd_scene load_steps=62 format=3 uid="uid://d1q8shcp8yajs"]

[ext_resource type="PackedScene" uid="uid://cps0mcnvb48mt" path="res://scenes/ui/shop/shop_card.tscn" id="1_463h5"]
[ext_resource type="Script" uid="uid://dogjm360k5xke" path="res://scenes/ui/shop/shop_panel.gd" id="1_ir0lx"]
[ext_resource type="Script" uid="uid://bn4vk3hwgvguj" path="res://resources/items/item_base.gd" id="2_ikmqp"]
[ext_resource type="PackedScene" uid="uid://dx8joxe2jp25p" path="res://scenes/ui/stats/stats_container.tscn" id="2_ir0lx"]
[ext_resource type="Resource" uid="uid://b1cpgsnisp755" path="res://resources/items/weapons/melee/axe/item_axe_1.tres" id="3_eb4ko"]
[ext_resource type="StyleBox" uid="uid://dvm50xvp1nb7j" path="res://styles/common_style.tres" id="3_h1ng6"]
[ext_resource type="Resource" uid="uid://dj35ttd1h22pk" path="res://resources/items/weapons/melee/axe/item_axe_2.tres" id="4_auh5d"]
[ext_resource type="Resource" uid="uid://c85shojk0wvxn" path="res://resources/items/weapons/melee/axe/item_axe_3.tres" id="5_fltqq"]
[ext_resource type="Resource" uid="uid://x0okk6a5i7bx" path="res://resources/items/weapons/melee/axe/item_axe_4.tres" id="6_ykntx"]
[ext_resource type="Resource" uid="uid://ce3e0y3uiyw7k" path="res://resources/items/weapons/melee/chainsaw/item_chainsaw_1.tres" id="7_rq155"]
[ext_resource type="Resource" uid="uid://yumnpvvwlvyp" path="res://resources/items/weapons/melee/chainsaw/item_chainsaw_2.tres" id="8_kfl71"]
[ext_resource type="Resource" uid="uid://djro7tbha4ha1" path="res://resources/items/weapons/melee/chainsaw/item_chainsaw_3.tres" id="9_v7d0x"]
[ext_resource type="Resource" uid="uid://1ihgjcuo7q61" path="res://resources/items/weapons/melee/chainsaw/item_chainsaw_4.tres" id="10_2qkey"]
[ext_resource type="Resource" uid="uid://ubr7hbifp57w" path="res://resources/items/weapons/melee/mace/item_mace_1.tres" id="11_hdqjg"]
[ext_resource type="Resource" uid="uid://dvsx0kgq0vfrp" path="res://resources/items/weapons/melee/mace/item_mace_2.tres" id="12_kt0ms"]
[ext_resource type="Resource" uid="uid://dtge4tsjyew7h" path="res://resources/items/weapons/melee/mace/item_mace_3.tres" id="13_a1d76"]
[ext_resource type="Resource" uid="uid://b8741trkl3jlg" path="res://resources/items/weapons/melee/mace/item_mace_4.tres" id="14_gywsb"]
[ext_resource type="Resource" uid="uid://cweu6htdsbvj6" path="res://resources/items/weapons/melee/punch/item_punch_1.tres" id="15_hnykb"]
[ext_resource type="Resource" uid="uid://bdisbntqucwax" path="res://resources/items/weapons/melee/punch/item_punch_2.tres" id="16_atkh0"]
[ext_resource type="Resource" uid="uid://b5env8kegir2c" path="res://resources/items/weapons/melee/punch/item_punch_3.tres" id="17_058qg"]
[ext_resource type="Resource" uid="uid://dixa5m5poi6rr" path="res://resources/items/weapons/melee/punch/item_punch_4.tres" id="18_g8pmg"]
[ext_resource type="Resource" uid="uid://cgdk4a1vfyo2j" path="res://resources/items/weapons/melee/sword/item_sword_1.tres" id="19_eaodt"]
[ext_resource type="Resource" uid="uid://bl7l436507rhc" path="res://resources/items/weapons/melee/sword/item_sword_2.tres" id="20_f6r64"]
[ext_resource type="Resource" uid="uid://cyi2qgn0vlcgf" path="res://resources/items/weapons/melee/sword/item_sword_3.tres" id="21_miqpl"]
[ext_resource type="Resource" uid="uid://b85qprq26ktyj" path="res://resources/items/weapons/melee/sword/item_sword_4.tres" id="22_0f55u"]
[ext_resource type="Resource" uid="uid://cgerr5oqpjun7" path="res://resources/items/weapons/melee/wand/item_wand_1.tres" id="23_sue62"]
[ext_resource type="Resource" uid="uid://bh7apo54perj8" path="res://resources/items/weapons/melee/wand/item_wand_2.tres" id="24_hg33w"]
[ext_resource type="Resource" uid="uid://bg6nxpwp5en2" path="res://resources/items/weapons/melee/wand/item_wand_3.tres" id="25_0mm06"]
[ext_resource type="Resource" uid="uid://cm11o7kf16urw" path="res://resources/items/weapons/melee/wand/item_wand_4.tres" id="26_0hkb6"]
[ext_resource type="Resource" uid="uid://imimryc45lel" path="res://resources/items/weapons/range/laser/item_laser_1.tres" id="27_51kni"]
[ext_resource type="Resource" uid="uid://cu24ba0x5tcd3" path="res://resources/items/weapons/range/laser/item_laser_2.tres" id="28_kpjlc"]
[ext_resource type="Resource" uid="uid://dagmiagvjnojj" path="res://resources/items/weapons/range/laser/item_laser_3.tres" id="29_mk8bd"]
[ext_resource type="Resource" uid="uid://c0sl8iarkebl5" path="res://resources/items/weapons/range/laser/item_laser_4.tres" id="30_isyeg"]
[ext_resource type="Resource" uid="uid://fqtjrl60c7vd" path="res://resources/items/weapons/range/pistol/item_pistol_1.tres" id="31_diukg"]
[ext_resource type="Resource" uid="uid://b4d6n68q7bf20" path="res://resources/items/weapons/range/pistol/item_pistol_2.tres" id="32_o5bfx"]
[ext_resource type="Resource" uid="uid://bf62a1n88nl0m" path="res://resources/items/weapons/range/pistol/item_pistol_3.tres" id="33_gdp41"]
[ext_resource type="Resource" uid="uid://b4xhaj3pv84m1" path="res://resources/items/weapons/range/pistol/item_pistol_4.tres" id="34_qrt2o"]
[ext_resource type="Resource" uid="uid://cus7cp8qtvf2x" path="res://resources/items/weapons/range/revolver/item_revolver_1.tres" id="35_5pudo"]
[ext_resource type="Resource" uid="uid://bpt4bdjqlfke8" path="res://resources/items/weapons/range/revolver/item_revolver_2.tres" id="36_qbn8f"]
[ext_resource type="Resource" uid="uid://c0fxpgl2rvlls" path="res://resources/items/weapons/range/revolver/item_revolver_3.tres" id="37_qhkj7"]
[ext_resource type="Resource" uid="uid://s30vwo2afo6w" path="res://resources/items/weapons/range/revolver/item_revolver_4.tres" id="38_f13ul"]
[ext_resource type="Resource" uid="uid://4sxp5j11l8yy" path="res://resources/items/weapons/range/shotgun/item_shotgun_1.tres" id="39_xhh7p"]
[ext_resource type="Resource" uid="uid://6j5uy7sfjjfr" path="res://resources/items/weapons/range/shotgun/item_shotgun_2.tres" id="40_art4w"]
[ext_resource type="Resource" uid="uid://b1no0bgtg7oyw" path="res://resources/items/weapons/range/shotgun/item_shotgun_3.tres" id="41_1baj0"]
[ext_resource type="Resource" uid="uid://cx05e5wtbjpq7" path="res://resources/items/weapons/range/shotgun/item_shotgun_4.tres" id="42_qsbpc"]
[ext_resource type="Resource" uid="uid://xa5yx3ou1hck" path="res://resources/items/weapons/range/smg/item_smg_1.tres" id="43_t1yet"]
[ext_resource type="Resource" uid="uid://b3xt0cpapqprk" path="res://resources/items/weapons/range/smg/item_smg_2.tres" id="44_4on5a"]
[ext_resource type="Resource" uid="uid://box021xx3uy46" path="res://resources/items/weapons/range/smg/item_smg_3.tres" id="45_0q6hh"]
[ext_resource type="Resource" uid="uid://bot7h6j3afpiv" path="res://resources/items/weapons/range/smg/item_smg_4.tres" id="46_do4hq"]
[ext_resource type="Resource" uid="uid://b4mxeykkucplr" path="res://resources/items/passives/data/passive_item_ball.tres" id="47_kfl71"]
[ext_resource type="Resource" uid="uid://ctx5sr63b36uc" path="res://resources/items/passives/data/passive_item_cape.tres" id="48_v7d0x"]
[ext_resource type="Resource" uid="uid://dsgs4qme4j001" path="res://resources/items/passives/data/passive_item_rage.tres" id="49_2qkey"]
[ext_resource type="PackedScene" uid="uid://cqd7gxxeb4hju" path="res://scenes/ui/shop/item_card.tscn" id="50_auh5d"]
[ext_resource type="PackedScene" uid="uid://bawn7m1lgwf2b" path="res://scenes/ui/coins_bag/coins_bag.tscn" id="50_eb4ko"]
[ext_resource type="Resource" uid="uid://bt3ioqd6m6uph" path="res://resources/items/passives/data/passive_item_sword.tres" id="50_hdqjg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cb5uh"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.203922, 0.203922, 0.203922, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="LabelSettings" id="LabelSettings_xdok1"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_6mo1e"]
font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_463h5"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.235294, 0.603922, 0.231373, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ir0lx"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.184314, 0.439216, 0.435294, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h1ng6"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.898039, 0.243137, 0.313726, 0.6)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
corner_detail = 5

[node name="ShopPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cb5uh")
script = ExtResource("1_ir0lx")
shop_items = Array[ExtResource("2_ikmqp")]([ExtResource("3_eb4ko"), ExtResource("4_auh5d"), ExtResource("5_fltqq"), ExtResource("6_ykntx"), ExtResource("7_rq155"), ExtResource("8_kfl71"), ExtResource("9_v7d0x"), ExtResource("10_2qkey"), ExtResource("11_hdqjg"), ExtResource("12_kt0ms"), ExtResource("13_a1d76"), ExtResource("14_gywsb"), ExtResource("15_hnykb"), ExtResource("16_atkh0"), ExtResource("17_058qg"), ExtResource("18_g8pmg"), ExtResource("19_eaodt"), ExtResource("20_f6r64"), ExtResource("21_miqpl"), ExtResource("22_0f55u"), ExtResource("23_sue62"), ExtResource("24_hg33w"), ExtResource("25_0mm06"), ExtResource("26_0hkb6"), ExtResource("27_51kni"), ExtResource("28_kpjlc"), ExtResource("29_mk8bd"), ExtResource("30_isyeg"), ExtResource("31_diukg"), ExtResource("32_o5bfx"), ExtResource("33_gdp41"), ExtResource("34_qrt2o"), ExtResource("35_5pudo"), ExtResource("36_qbn8f"), ExtResource("37_qhkj7"), ExtResource("38_f13ul"), ExtResource("39_xhh7p"), ExtResource("40_art4w"), ExtResource("41_1baj0"), ExtResource("42_qsbpc"), ExtResource("43_t1yet"), ExtResource("44_4on5a"), ExtResource("45_0q6hh"), ExtResource("46_do4hq"), ExtResource("47_kfl71"), ExtResource("48_v7d0x"), ExtResource("49_2qkey"), ExtResource("50_hdqjg")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 19.3333
grow_horizontal = 2
text = "shop"
label_settings = SubResource("LabelSettings_xdok1")

[node name="ItemsContainer" type="HBoxContainer" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -902.0
offset_top = -342.0
offset_right = 390.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="ShopCard" parent="MarginContainer/Control/ItemsContainer" instance=ExtResource("1_463h5")]
layout_mode = 2

[node name="ShopCard2" parent="MarginContainer/Control/ItemsContainer" instance=ExtResource("1_463h5")]
layout_mode = 2

[node name="ShopCard3" parent="MarginContainer/Control/ItemsContainer" instance=ExtResource("1_463h5")]
layout_mode = 2

[node name="ShopCard4" parent="MarginContainer/Control/ItemsContainer" instance=ExtResource("1_463h5")]
layout_mode = 2

[node name="StatsContainer" parent="MarginContainer/Control" instance=ExtResource("2_ir0lx")]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -342.0
offset_right = -20.0
offset_bottom = 208.0
grow_horizontal = 0
grow_vertical = 2

[node name="PassivePanel" type="VBoxContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(752, 250)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -272.0
offset_right = 772.0
offset_bottom = -22.0
grow_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/Control/PassivePanel"]
layout_mode = 2
text = "items"
label_settings = SubResource("LabelSettings_6mo1e")
horizontal_alignment = 1

[node name="PassiveContainer" type="GridContainer" parent="MarginContainer/Control/PassivePanel"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 8

[node name="ItemCard" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard4" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard5" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard6" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard7" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard8" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard9" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard10" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard11" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard12" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard13" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard14" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard15" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard16" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard2" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard3" type="Button" parent="MarginContainer/Control/PassivePanel/PassiveContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="WeaponPanel" type="VBoxContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(350, 250)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 998.0
offset_top = -272.0
offset_right = 1348.0
offset_bottom = -22.0
grow_vertical = 0

[node name="Label" type="Label" parent="MarginContainer/Control/WeaponPanel"]
layout_mode = 2
text = "weapons"
label_settings = SubResource("LabelSettings_6mo1e")
horizontal_alignment = 1

[node name="WeaponContainer" type="GridContainer" parent="MarginContainer/Control/WeaponPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 3

[node name="ItemCard" parent="MarginContainer/Control/WeaponPanel/WeaponContainer" instance=ExtResource("50_auh5d")]
layout_mode = 2

[node name="ItemCard4" type="Button" parent="MarginContainer/Control/WeaponPanel/WeaponContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard5" type="Button" parent="MarginContainer/Control/WeaponPanel/WeaponContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard6" type="Button" parent="MarginContainer/Control/WeaponPanel/WeaponContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard7" type="Button" parent="MarginContainer/Control/WeaponPanel/WeaponContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="ItemCard8" type="Button" parent="MarginContainer/Control/WeaponPanel/WeaponContainer"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_styles/normal = ExtResource("3_h1ng6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(350, 300)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
offset_top = -300.0
offset_right = -90.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 24
alignment = 1

[node name="NewWaveButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_463h5")
text = "new wave"

[node name="CombineButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_ir0lx")
text = "combine"

[node name="SellWeaponButton" type="Button" parent="MarginContainer/Control/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = SubResource("StyleBoxFlat_h1ng6")
text = "sell"

[node name="CoinsBag" parent="MarginContainer/Control" instance=ExtResource("50_eb4ko")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/NewWaveButton" to="." method="_on_new_wave_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/CombineButton" to="." method="_on_combine_button_pressed"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/SellWeaponButton" to="." method="_on_sell_weapon_button_pressed"]
